--- a/src/main/resources/templates/User/add_contact.html
+++ b/src/main/resources/templates/User/add_contact.html
@@ -67,13 +67,13 @@
             >
               <h1 class="text-2xl font-semibold">Add New Contact</h1>
               <p class="text-gray-400">
-                This contact will be stored cloud, you can direct email this
-                client from connectly
+                Organize Your Network – Add a Contact Now!
               </p>
 
               <form
-                action="
-              "
+                data-th-action="@{'/user/contacts/add'}"
+                data-th-object="${contactForm}"
+                method="post"
                 class="mt-3"
               >
                 <!-- name  -->
@@ -90,8 +90,8 @@
                       <i class="fa-solid fa-user h-4 w-4"></i>
                     </div>
                     <input
+                      data-th-field="*{name}"
                       type="text"
-                      id="input-group-1"
                       class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                       placeholder="Lovedeep Singh"
                     />
@@ -112,8 +112,8 @@
                       <i class="fa-solid fa-envelope h-4 w-4"></i>
                     </div>
                     <input
+                      data-th-field="*{email}"
                       type="text"
-                      id="input-group-1"
                       class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                       placeholder="lovedeepsingh66@yahoo.com"
                     />
@@ -134,8 +134,8 @@
                       <i class="fa-solid fa-phone h-4 w-4"></i>
                     </div>
                     <input
+                      data-th-field="*{phoneNumber}"
                       type="text"
-                      id="input-group-1"
                       class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                       placeholder="4444333322"
                     />
@@ -151,7 +151,7 @@
                   >
 
                   <textarea
-                    id="message"
+                    data-th-field="*{address}"
                     rows="2"
                     class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                     placeholder="Industrial Area Phase I, Plot No. 178, MW Area, Chandigarh, 160002, India"
@@ -167,7 +167,7 @@
                   >
 
                   <textarea
-                    id="message"
+                    data-th-field="*{description}"
                     rows="2"
                     class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                     placeholder="This man has Alzheimer's"
@@ -183,11 +183,11 @@
                         <div
                           class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none"
                         >
-                          <i class="fa-brands fa-instagram h-5 w-5"></i>
+                          <i class="fa-solid fa-earth-americas h-4 w-4"></i>
                         </div>
                         <input
                           type="text"
-                          id="input-group-1"
+                          data-th-field="*{websiteLink}"
                           class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                           placeholder="www.lovedeepsingh.com"
                         />
@@ -205,7 +205,7 @@
                         </div>
                         <input
                           type="text"
-                          id="input-group-1"
+                          data-th-field="*{linkedInLink}"
                           class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                           placeholder="www.lovedeepsingh.com"
                         />
@@ -215,23 +215,24 @@
                 </div>
 
                 <!-- contact image  -->
-                <label
-                  class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-                  for="small_size"
-                  >Small file input</label
-                >
-                <input
-                  class="block w-full mb-5 text-xs text-gray-900 border border-gray-300 rounded-lg cursor-pointer bg-gray-50 dark:text-gray-400 focus:outline-none dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400"
-                  id="small_size"
-                  type="file"
-                />
+                <div class="mb-3">
+                  <label
+                    class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                    for="small_size"
+                    >Small file input</label
+                  >
+                  <input
+                    class="block w-full mb-5 text-xs text-gray-900 border border-gray-300 rounded-lg cursor-pointer bg-gray-50 dark:text-gray-400 focus:outline-none dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400"
+                    id="small_size"
+                    type="file"
+                  />
+                </div>
 
                 <!-- favorite or not  -->
                 <div class="flex items-center mt-3 mb-1">
                   <input
-                    id="default-checkbox"
+                    data-th-field="*{favorite}"
                     type="checkbox"
-                    value=""
                     class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600"
                   />
                   <label
@@ -243,34 +244,16 @@
 
                 <!-- buttons  -->
                 <div class="button-container text-center">
-                  <!-- <button class="px-3 py-2 rounded bg-black text-white">
-                    
-                  </button> -->
                   <button
                     type="submit"
-                    style="
-                      padding-left: 12px;
-                      padding-right: 12px;
-                      padding-top: 8px;
-                      padding-bottom: 8px;
-                      border-radius: 8px;
-                      background-color: black;
-                      color: white;
-                    "
+                    class="px-3 py-2 rounded dark:bg-blue-600 bg-gray-900 text-white hover:bg-gray-800 dark:hover:bg-blue-700"
                   >
                     Add Contact
                   </button>
+
                   <button
                     type="reset"
-                    style="
-                      padding-left: 12px;
-                      padding-right: 12px;
-                      padding-top: 8px;
-                      padding-bottom: 8px;
-                      border-radius: 8px;
-                      background-color: black;
-                      color: white;
-                    "
+                    class="px-3 py-2 rounded dark:bg-blue-600 bg-gray-900 text-white hover:bg-gray-800 dark:hover:bg-blue-700"
                   >
                     Reset
                   </button>
