--- a/src/main/resources/templates/User/user_navbar.html
+++ b/src/main/resources/templates/User/user_navbar.html
@@ -105,7 +105,7 @@
     </div>
     <!-- menus  -->
     <div
-      class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1"
+      class="items-center z-50 justify-between hidden w-full md:flex md:w-auto md:order-1"
       id="navbar-cta"
     >
       <ul
