--- a/src/main/resources/templates/User/add_contact.html
+++ b/src/main/resources/templates/User/add_contact.html
@@ -65,6 +65,8 @@
             <div
               class="card block p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700"
             >
+              <!-- message of form  -->
+              <div data-th-replace="message::messagebox"></div>
               <h1 class="text-2xl font-semibold">Add New Contact</h1>
               <p class="text-gray-400">
                 Organize Your Network – Add a Contact Now!
@@ -75,6 +77,7 @@
                 data-th-object="${contactForm}"
                 method="post"
                 class="mt-3"
+                enctype="multipart/form-data"
               >
                 <!-- name  -->
                 <div class="mb-3">
@@ -83,7 +86,7 @@
                     class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
                     >Contact Name</label
                   >
-                  <div class="relative mb-6">
+                  <div class="relative mb-1">
                     <div
                       class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none"
                     >
@@ -92,20 +95,26 @@
                     <input
                       data-th-field="*{name}"
                       type="text"
+                      id="name"
                       class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                       placeholder="Lovedeep Singh"
                     />
                   </div>
+                  <p
+                    th:if="${#fields.hasErrors('name')}"
+                    data-th-errors="*{name}"
+                    class="text-red-600"
+                  ></p>
                 </div>
 
                 <!-- email  -->
                 <div class="mb-3">
                   <label
-                    for="input-group-1"
+                    for="email"
                     class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
                     >Contact Email</label
                   >
-                  <div class="relative mb-6">
+                  <div class="relative mb-1">
                     <div
                       class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none"
                     >
@@ -113,21 +122,27 @@
                     </div>
                     <input
                       data-th-field="*{email}"
-                      type="text"
+                      type="email"
+                      id="email"
                       class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                       placeholder="lovedeepsingh66@yahoo.com"
                     />
                   </div>
+                  <p
+                    th:if="${#fields.hasErrors('email')}"
+                    data-th-errors="*{email}"
+                    class="text-red-600"
+                  ></p>
                 </div>
 
                 <!-- phone  -->
                 <div class="mb-3">
                   <label
-                    for="input-group-1"
+                    for="phone"
                     class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
                     >Contact Phone</label
                   >
-                  <div class="relative mb-6">
+                  <div class="relative mb-1">
                     <div
                       class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none"
                     >
@@ -135,27 +150,39 @@
                     </div>
                     <input
                       data-th-field="*{phoneNumber}"
+                      id="phone"
                       type="text"
                       class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                       placeholder="4444333322"
                     />
                   </div>
+                  <p
+                    th:if="${#fields.hasErrors('phoneNumber')}"
+                    data-th-errors="*{phoneNumber}"
+                    class="text-red-600"
+                  ></p>
                 </div>
 
                 <!-- address  -->
                 <div class="mb-3">
                   <label
-                    for="message"
+                    for="about"
                     class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
                     >Contact Address</label
                   >
 
                   <textarea
                     data-th-field="*{address}"
+                    id="about"
                     rows="2"
                     class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                     placeholder="Industrial Area Phase I, Plot No. 178, MW Area, Chandigarh, 160002, India"
                   ></textarea>
+                  <p
+                    th:if="${#fields.hasErrors('address')}"
+                    data-th-errors="*{address}"
+                    class="text-red-500"
+                  ></p>
                 </div>
 
                 <!-- desription  -->
@@ -223,8 +250,17 @@
                   >
                   <input
                     class="block w-full mb-5 text-xs text-gray-900 border border-gray-300 rounded-lg cursor-pointer bg-gray-50 dark:text-gray-400 focus:outline-none dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400"
-                    id="small_size"
+                    id="image_file_input"
                     type="file"
+                    data-th-field="*{contactImage}"
+                  />
+
+                  <img
+                    src=""
+                    class="max-h-52 mx-auto rounded-lg shadow m-3"
+                    id="upload_image_preview"
+                    alt=""
+                    style="max-height: 13rem"
                   />
                 </div>
 
@@ -280,6 +316,7 @@
       </style>
     </div>
 
+    <script data-th-src="@{'/js/admin.js'}"></script>
     <script>
       console.log("this is a dashboard");
     </script>
