--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,90 +1,164 @@
 <!DOCTYPE html>
 <html lang="en" th:replace="~{base::parent(~{::#content},~{::title},~{})}">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign-up Page</title>
-</head>
-<body> 
+  </head>
+  <body>
     <div id="content">
+      <div class="grid grid-cols-12 mt-4">
+        <div class="col-span-4 md:col-span-2 lg:col-span-3 xl:col-span-4"></div>
+        <div class="col-span-12 md:col-span-8 lg:col-span-6 xl:col-span-4">
+          <!--                        card-->
+          <div
+            class="block p-6 border-t-[10px] border-blue-700 bg-white rounded-xl shadow dark:bg-gray-800 dark:border-blue-700"
+          >
+            <!-- messgae here  -->
+            <div data-th-replace="message::messagebox"></div>
+            <h5
+              class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white"
+            >
+              Sign Up
+            </h5>
+            <p class="font-normal text-gray-900 dark:text-gray-400">
+              Start managing your contacts :)
+            </p>
+            <form
+              data-th-action="@{'/do-register'}"
+              data-th-object="${userForm}"
+              method="post"
+              class="mt-5"
+              novalidate
+            >
+              <!--                            name-->
+              <div class="mb-3">
+                <label
+                  for="input-group-1"
+                  class="block mb-2 text-sm font-bold text-gray-900 dark:text-white"
+                  >Name</label
+                >
+                <input
+                  type="text"
+                  id="name"
+                  data-th-field="*{name}"
+                  class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                  placeholder="Enter Name"
+                  required
+                />
+                <!-- validate errors -->
+                <p
+                  data:th:if="${#fields.hasErrors('name')}"
+                  data-th-errors="*{name}"
+                  class="text-red-600 px-1 py-2"
+                ></p>
+              </div>
 
-        <div class="grid grid-cols-12 mt-4">
-            <div class="col-span-4 md:col-span-2 lg:col-span-3 xl:col-span-4"></div>
-                <div class="col-span-12 md:col-span-8 lg:col-span-6 xl:col-span-4">
-                    <!--                        card-->
-                    <div  class="block p-6 border-t-[10px] border-blue-700  bg-white rounded-xl shadow  dark:bg-gray-800 dark:border-blue-700">
-                        <!-- messgae here  -->
-                        <div data-th-replace="message::messagebox"></div> 
-                        <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Sign Up</h5>
-                        <p class="font-normal text-gray-900 dark:text-gray-400">Start managing your contacts :)</p>
-                        <form data-th-action="@{'/do-register'}" 
-                        data-th-object="${userForm}" 
-                        method ="post" class="mt-5" novalidate>
-<!--                            name-->
-                            <div class="mb-3">
-                                <label for="email;" class="block mb-2 text-sm font-bold text-gray-900 dark:text-white">Name</label>
-                                <input type="text" id="name" 
-                                data-th-field="*{name}"
-                                class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Enter Name" required />
-                                <!-- validate errors -->
-                                <p 
-                                data:th:if="${#fields.hasErrors('name')}"
-                                data-th-errors="*{name}"
-                                class="text-red-600 px-1 py-2"></p>
-                            </div>
-
-<!--                            email-->
-                            <div class="mb-3">
-                                <label for="email"  class="block mb-2 text-sm font-bold text-gray-900 dark:text-white">E-mail</label>
-                                <input type="email" id="email"  data-th-field="*{email}"class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="name@Worldcup.com" required />
-                                <p 
-                                data:th:if="${#fields.hasErrors('email')}"
-                                data-th-errors="*{email}"
-                                class="text-red-600 px-1 py-2"></p>
-                            </div>
-<!--                            password-->
-                            <div class="mb-3">
-                                <label for="password" class="block mb-2 text-sm font-bold text-gray-900 dark:text-white">Password</label>
-                                <input type="password" data-th-field="*{password}" id="password" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="" required />
-                                <p 
-                                data:th:if="${#fields.hasErrors('password')}"
-                                data-th-errors="*{password}"
-                                class="text-red-600 px-1 py-2"></p>
-                            </div>
-<!--                            phone number-->
-                            <div class="mb-3">
-                                <label for="phone" class="block mb-2 text-sm font-bold text-gray-900 dark:text-white">Phone</label>
-                                <input type="text" id="phone" data-th-field="*{phoneNumber}"class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="" required />
-                                <p 
-                                data:th:if="${#fields.hasErrors('phoneNumber')}"
-                                data-th-errors="*{phoneNumber}"
-                                class="text-red-600 px-1 py-2"></p>
-                            </div>
-<!--                            textarea-->
-                            <div class="mb-3">
-                                <label for="about" class="block mb-2 text-sm font-bold text-gray-900 dark:text-white">Write something about yourself</label>
-                                <textarea data-th-field="*{about}"id="about" rows="2" class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Write your thoughts here..."></textarea>
-                                <p 
-                                data:th:if="${#fields.hasErrors('about')}"
-                                data-th-errors="*{about}"
-                                class="text-red-600 px-1 py-2"></p>
-                            </div>
-<!--                            buttons-->
-                            <div class="mb-3 flex justify-center space-x-3">
-                                <button type = "submit" class="px-3 py-2 rounded bg-gray-700 hover:bg-gray-900 text-white dark:bg-blue-700 dark:hover:bg-blue-900 ">
-                                    Register
-                                </button>
-                                <button type = "reset" class="px-3 py-2 rounded bg-orange-700 hover:bg-orange-900 text-white dark:bg-orange-700 dark:hover:bg-orange-900 ">
-                                    Reset
-                                </button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
+              <!--                            email-->
+              <div class="mb-3">
+                <label
+                  for="email"
+                  class="block mb-2 text-sm font-bold text-gray-900 dark:text-white"
+                  >E-mail</label
+                >
+                <input
+                  type="email"
+                  id="email"
+                  data-th-field="*{email}"
+                  class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                  placeholder="name@Worldcup.com"
+                  required
+                />
+                <p
+                  data:th:if="${#fields.hasErrors('email')}"
+                  data-th-errors="*{email}"
+                  class="text-red-600 px-1 py-2"
+                ></p>
+              </div>
+              <!--                            password-->
+              <div class="mb-3">
+                <label
+                  for="password"
+                  class="block mb-2 text-sm font-bold text-gray-900 dark:text-white"
+                  >Password</label
+                >
+                <input
+                  type="password"
+                  data-th-field="*{password}"
+                  id="password"
+                  class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                  placeholder=""
+                  required
+                />
+                <p
+                  data:th:if="${#fields.hasErrors('password')}"
+                  data-th-errors="*{password}"
+                  class="text-red-600 px-1 py-2"
+                ></p>
+              </div>
+              <!--                            phone number-->
+              <div class="mb-3">
+                <label
+                  for="phone"
+                  class="block mb-2 text-sm font-bold text-gray-900 dark:text-white"
+                  >Phone</label
+                >
+                <input
+                  type="text"
+                  id="phone"
+                  data-th-field="*{phoneNumber}"
+                  class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                  placeholder=""
+                  required
+                />
+                <p
+                  data:th:if="${#fields.hasErrors('phoneNumber')}"
+                  data-th-errors="*{phoneNumber}"
+                  class="text-red-600 px-1 py-2"
+                ></p>
+              </div>
+              <!--                            textarea-->
+              <div class="mb-3">
+                <label
+                  for="about"
+                  class="block mb-2 text-sm font-bold text-gray-900 dark:text-white"
+                  >Write something about yourself</label
+                >
+                <textarea
+                  data-th-field="*{about}"
+                  id="about"
+                  rows="2"
+                  class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                  placeholder="Write your thoughts here..."
+                ></textarea>
+                <p
+                  data:th:if="${#fields.hasErrors('about')}"
+                  data-th-errors="*{about}"
+                  class="text-red-600 px-1 py-2"
+                ></p>
+              </div>
+              <!--                            buttons-->
+              <div class="mb-3 flex justify-center space-x-3">
+                <button
+                  type="submit"
+                  class="px-3 py-2 rounded bg-gray-700 hover:bg-gray-900 text-white dark:bg-blue-700 dark:hover:bg-blue-900"
+                >
+                  Register
+                </button>
+                <button
+                  type="reset"
+                  class="px-3 py-2 rounded bg-orange-700 hover:bg-orange-900 text-white dark:bg-orange-700 dark:hover:bg-orange-900"
+                >
+                  Reset
+                </button>
+              </div>
+            </form>
+          </div>
         </div>
+      </div>
     </div>
     <script>
-        console.log("register page");
+      console.log("register page");
     </script>
-</body>
+  </body>
 </html>
